--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>CHOOSE</title>
 
         <!-- STYLE-SHEET -->
-        <link rel="stylesheet" type="text/css" href="./Choose.css" />
+        <link rel="stylesheet" type="text/css" href="./index.css" />
 
         <!-- SCRIPT -->
         <script src="https://kit.fontawesome.com/c1a5c53c29.js" crossorigin="anonymous"></script>
